# samplepcb-web-platform

./: .gitignore  .wiki-compiler.json  AGENTS.md  CLAUDE.md  README.md  deploy.sh  talent_market_ai_requirement_question_policy.md
.githooks/: .gitattributes  pre-push
docs/: AI_DIAGRAM.md  AI_WORKFLOW_PLAYBOOK.md  BOM_QUOTE.md  DB_TUNING.md  DELIVERY_CARRIER_INTEGRATION.md  DEPLOY_CENTRAFAB.md  GERBER_ORDER_FLOW.md  GERBER_PRICE_MODE.md  LEGACY_DB_MIGRATION.md  LEGACY_SITE.md  LOCAL_MAIL_TESTING.md  MARKET_FLOW.md  PARTS_SEARCH.md  SEO_MANAGEMENT.md  UPSTREAM_SYNC.md  bom-quote-code-review-2026-07-19.md  order-notify-gating.md  pricing-engine-parity.md  review-naming.md  samplepcb-pricing-api-body-cases.md  wishlist-hidden.md
docs/prompts/: sp-engine-candidate-decision.md
ops/: README.md
ops/nginx/: local-web.conf
ops/scripts/: e2e-market.mts
ops/systemd/: sp-engine.service
samplepcb-parts-engine/: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  run.ps1  run.sh
samplepcb-parts-engine/app/: pyproject.toml
samplepcb-parts-engine/app/src/parts_engine_app/: __init__.py  capabilities.py  config.py  jobs.py  main.py  refresh.py  routes.py
samplepcb-parts-engine/app/tests/: test_app.py  test_refresh.py  test_smartbom_mixed_value_csv.py  test_smartbom_relational_profile.py
samplepcb-parts-engine/contracts/fixtures/: component-record.json
samplepcb-web/: .gitattributes  .htaccess
samplepcb-web-mono-app/: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  tsconfig.base.json
samplepcb-web-platform-wiki/: .compile-state.json  CONTEXT.md  INDEX.md  log.md  schema.md
samplepcb-web-platform-wiki/concepts/: admin-vue-consume-php.md  core-nonmodification.md  in-memory-async-jobs.md  lazy-derived-state.md  manual-sync-drift.md  server-single-truth.md  snapshot-freeze.md
(+444 files in other folders)
