# parts-engine-app — FastAPI 오케스트레이션 (BOM 추출 + 공급사 검색 잡 API)
# 실행: uv run uvicorn parts_engine_app.main:app --port 8100
[project]
name = "parts-engine-app"
version = "0.1.0"
description = "FastAPI 오케스트레이션 — BOM 추출 + 공급사 검색 잡 API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "python-multipart>=0.0.20,<1",
  "python-dotenv>=1,<2",
  "bom-extraction-engine",
  "supplier-search-engine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parts_engine_app"]
